# jeffastor_tutor

./: .python-version  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  requirements.txt
backend/app/api/: server.py
backend/app/api/routes/: __init__.py  cleanings.py  token.py  users.py
backend/app/core/: config.py  tasks.py
backend/app/db/: engine.py  session.py  tasks.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: f721febf752b_create_account_table.py
backend/app/db/models/: base.py  temp.py
backend/app/dependencies/: auth.py  database.py
backend/app/models/: cleaning.py  core.py  user.py
backend/app/services/: authentication.py
backend/app/services/authentication/: authentication.py  convert.py  jwt.py
backend/tests/: conftest.py  test_cleanings.py  test_users.py
