[tool.poetry]
name = "jeffastor_tutor"
version = "0.1.0"
description = ""
authors = ["phi <phi.friday@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
orjson = "^3.6.8"
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.36"
sqlmodel = "^0.0.6"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
